--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -7,6 +7,6 @@
     grid-template-columns: repeat(3,1fr);
     grid-gap: 10px;
 }
-.slider img{
-    height: 500px;
+.header-img img{
+    max-width: 100%;
 }
